--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
             </div>
-            <button type="submit">Submit</button>
+            <input type="submit" value="Submit">
         </form>
     </div>
     <div id="message">
@@ -29,6 +29,7 @@
         <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
         <p id="number" class="invalid">A <b>number</b></p>
         <p id="length" class="invalid">Minimum <b>8 characters</b></p>
+        <p id="length2" class="invalid">Maximum <b>20 characters</b></p>
     </div>
 </body>
 </html>
